--- a/index.html
+++ b/index.html
@@ -67,23 +67,23 @@
 
             <section>
                 <div class="lista">
-                    <img src="img/img_minha_lista/poster_01.png" alt="Poster BoJack Horseman" />
+                    <img src="./img/img_minha_lista/poster_01.png" alt="Poster BoJack Horseman" />
                 </div>
 
                 <div class="lista">
-                    <img src="img/img_minha_lista/poster_02.png" alt="Poster Ozark" />
+                    <img src="./img/img_minha_lista/poster_02.png" alt="Poster Ozark" />
                 </div>
 
                 <div class="lista">
-                    <img src="img/img_minha_lista/poster_03.png" alt="Poster A vizinha da mulher na janela" />
+                    <img src="./img/img_minha_lista/poster_03.png" alt="Poster A vizinha da mulher na janela" />
                 </div>
 
                 <div class="lista">
-                    <img src="img/img_minha_lista/poster_04.png" alt="Poster Breaking bad" />
+                    <img src="./img/img_minha_lista/poster_04.png" alt="Poster Breaking bad" />
                 </div>
 
                 <div class="lista">
-                    <img src="img/img_minha_lista/poster_05.png" alt="Poster The end of the fuckink world" />
+                    <img src="./img/img_minha_lista/poster_05.png" alt="Poster The end of the fuckink world" />
                 </div>
             </section>
       </div>
